# loco

./: .gitignore  CHANGELOG_ENTRY.md  CHANGELOG_MODE_SWITCHING.md  DOCS_INDEX.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  MCP_COMMANDS_SUMMARY.md  README.md  TERMINAL_INPUT_IMPROVEMENTS.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.loco/commands/commit/: COMMAND.md
docs/: ANALYSIS.md  ARCHITECTURE.md  CHANGELOG.md  GITHUB_INSTALL_SETUP.md  HTTP_MCP_SUPPORT.md  LITELLM_EXPLAINED.md  LOCO_TECHNICAL_PRESENTATION.md  MCP.md  MCP_COMMANDS.md  MCP_FEATURE_COMPLETE.md  MCP_IMPLEMENTATION_SUMMARY.md  MCP_QUICK_REFERENCE.md  QUICKSTART.md  TERMINAL_INPUT_IMPROVEMENTS.md  development.md  index.md  installation.md  releasing.md  terminal-input-improvements.md
examples/agents/: explorer.md  planner.md  refactor.md
examples/mcp/: README.md  claude_desktop_config.json  config-with-mcp.json  test_mcp_server.sh
examples/skills/code-reviewer/: SKILL.md
examples/skills/debugger/: SKILL.md
examples/skills/test-writer/: SKILL.md
scripts/: demo_mcp_commands.py
src/loco/: __init__.py  __main__.py  agents.py  chat.py  cli.py  commands.py  config.py  history.py  rewind.py  skills.py  snapshots.py  usage.py
src/loco/mcp/: __init__.py  client.py  loader.py  protocol.py  server.py  transport.py
src/loco/tools/: __init__.py  base.py  bash.py  edit.py  glob.py  grep.py  read.py  write.py
src/loco/ui/: __init__.py  components.py  console.py
tests/: test_commands.py  test_mcp.py  test_rewind.py  test_snapshots.py
