[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loco"
version = "0.1.0"
description = "A Claude Code-inspired CLI for any OpenAI-compatible LLM"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = ["llm", "cli", "coding", "assistant", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
    "litellm>=1.40.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "prompt-toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
loco = "loco.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/loco"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]
